--- a/public/css/output.css
+++ b/public/css/output.css
@@ -1,5 +1,5 @@
 /*
-! tailwindcss v3.3.5 | MIT License | https://tailwindcss.com
+! tailwindcss v3.3.6 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -121,8 +121,10 @@ strong {
 }
 
 /*
-1. Use the user's configured `mono` font family by default.
-2. Correct the odd `em` font sizing in all browsers.
+1. Use the user's configured `mono` font-family by default.
+2. Use the user's configured `mono` font-feature-settings by default.
+3. Use the user's configured `mono` font-variation-settings by default.
+4. Correct the odd `em` font sizing in all browsers.
 */
 
 code,
@@ -131,8 +133,12 @@ samp,
 pre {
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   /* 1 */
-  font-size: 1em;
+  font-feature-settings: normal;
   /* 2 */
+  font-variation-settings: normal;
+  /* 3 */
+  font-size: 1em;
+  /* 4 */
 }
 
 /*
@@ -538,10 +544,6 @@ video {
   position: fixed;
 }
 
-.relative {
-  position: relative;
-}
-
 .left-1\/2 {
   left: 50%;
 }
@@ -570,28 +572,12 @@ video {
   margin-left: 1rem;
 }
 
-.ml-\[15\%\] {
-  margin-left: 15%;
-}
-
-.ml-\[165px\] {
-  margin-left: 165px;
-}
-
-.ml-\[35\%\] {
-  margin-left: 35%;
-}
-
 .mr-6 {
   margin-right: 1.5rem;
 }
 
-.mr-\[15\%\] {
-  margin-right: 15%;
-}
-
-.mr-\[35\%\] {
-  margin-right: 35%;
+.mr-10 {
+  margin-right: 2.5rem;
 }
 
 .block {
@@ -618,6 +604,10 @@ video {
   height: 33.333333%;
 }
 
+.h-10 {
+  height: 2.5rem;
+}
+
 .h-14 {
   height: 3.5rem;
 }
@@ -638,12 +628,16 @@ video {
   width: 50%;
 }
 
-.w-2\/3 {
-  width: 66.666667%;
+.w-1\/4 {
+  width: 25%;
 }
 
 .w-24 {
   width: 6rem;
+}
+
+.w-3\/5 {
+  width: 60%;
 }
 
 .w-\[1\%\] {
@@ -658,20 +652,12 @@ video {
   width: 33.333333%;
 }
 
-.w-1\/4 {
-  width: 25%;
-}
-
-.w-\[25\%\] {
-  width: 25%;
-}
-
 .min-w-\[30\%\] {
   min-width: 30%;
 }
 
-.table-fixed {
-  table-layout: fixed;
+.table-auto {
+  table-layout: auto;
 }
 
 .border-separate {
@@ -854,16 +840,16 @@ video {
   padding-bottom: 0.75rem;
 }
 
+.pl-10 {
+  padding-left: 2.5rem;
+}
+
 .pl-4 {
   padding-left: 1rem;
 }
 
-.pr-16 {
-  padding-right: 4rem;
-}
-
-.pr-4 {
-  padding-right: 1rem;
+.pr-10 {
+  padding-right: 2.5rem;
 }
 
 .text-left {
@@ -902,6 +888,11 @@ video {
 
 .text-lg {
   font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
   line-height: 1.75rem;
 }
 
@@ -948,4 +939,10 @@ video {
 
 .focus-visible\:outline-slate-300:focus-visible {
   outline-color: #cbd5e1;
+}
+
+@media (min-width: 768px) {
+  .md\:w-4\/5 {
+    width: 80%;
+  }
 }
