--- a/public/css/output.css
+++ b/public/css/output.css
@@ -576,6 +576,18 @@ video {
   top: 100px;
 }
 
+.top-8 {
+  top: 2rem;
+}
+
+.top-10 {
+  top: 2.5rem;
+}
+
+.top-14 {
+  top: 3.5rem;
+}
+
 .z-20 {
   z-index: 20;
 }
@@ -626,6 +638,10 @@ video {
 
 .mt-\[10\%\] {
   margin-top: 10%;
+}
+
+.mt-8 {
+  margin-top: 2rem;
 }
 
 .block {
@@ -718,6 +734,22 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-1\/4 {
+  width: 25%;
+}
+
+.w-1\/3 {
+  width: 33.333333%;
+}
+
+.w-1\/5 {
+  width: 20%;
+}
+
+.w-\[20\%\] {
+  width: 20%;
 }
 
 .min-w-\[30\%\] {
@@ -898,6 +930,11 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-gray-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+}
+
 .p-0 {
   padding: 0px;
 }
@@ -947,6 +984,10 @@ video {
 
 .pr-8 {
   padding-right: 2rem;
+}
+
+.pr-4 {
+  padding-right: 1rem;
 }
 
 .text-left {
@@ -1030,6 +1071,26 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-red-600 {
+  --tw-text-opacity: 1;
+  color: rgb(220 38 38 / var(--tw-text-opacity));
+}
+
+.text-red-700 {
+  --tw-text-opacity: 1;
+  color: rgb(185 28 28 / var(--tw-text-opacity));
+}
+
+.text-red-800 {
+  --tw-text-opacity: 1;
+  color: rgb(153 27 27 / var(--tw-text-opacity));
+}
+
+.text-red-400 {
+  --tw-text-opacity: 1;
+  color: rgb(248 113 113 / var(--tw-text-opacity));
+}
+
 .underline {
   text-decoration-line: underline;
 }
@@ -1068,10 +1129,18 @@ video {
   .sm\:w-3\/5 {
     width: 60%;
   }
+
+  .sm\:w-\[70\%\] {
+    width: 70%;
+  }
 }
 
 @media (min-width: 768px) {
   .md\:w-4\/5 {
     width: 80%;
+  }
+
+  .md\:w-\[70\%\] {
+    width: 70%;
   }
 }
